--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:6306/order_service
+spring.datasource.username=root
+spring.datasource.password=mypassword
+spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
