--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:6306/inventory_service
 spring.datasource.username=root
 spring.datasource.password=mypassword
 spring.jpa.hibernate.ddl-auto=create-drop
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=inventory-service
 
-server.port=8082
+server.port=0
