--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:6306/order_service
 spring.datasource.username=root
 spring.datasource.password=mypassword
 spring.jpa.hibernate.ddl-auto=update
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=order-service
 
 server.port=8081
